@@ -110,9 +110,9 @@ class TestApiKeyRoute(_TestFramework):
         api_key_obj, api_key, _ = self.generate_api_key(user)
 
         for params in [
-            {"api_key": "ABC", "expected": "API key does not exist"},
+            {"api_key": "ABC", "expected": "api key does not exist"},
             {"api_key": "{}:ABC".format(api_key_obj.id),
-             "expected": "API key not valid"}
+             "expected": "api key not valid"}
         ]:
             self.assertEqual(len(ApiKey.query.all()), 1)
 
