@@ -2,6 +2,7 @@ V 0.9.2:
   - Added ways to add more variables to template rendering for default routes
   - Fixed loading extra config data
   - Fixed issues with flask while testing due to import side effects
+  - Fixed flask API issues
 V 0.9.1:
   - Fixed errors when missing recaptcha string in form
 V 0.9.0:
